scorecard css spacing fixes, boxscore css slight tweak

--- a/src/components/BoxScore/BoxScore.css
+++ b/src/components/BoxScore/BoxScore.css
@@ -23,9 +23,6 @@ Boxscore Table
 
 .boxscore-title {
     text-align: center;
-    white-space: pre;
-    display: block;
-
 }
 
 .boxscore-table-div {
